// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.runtime.kubernetes.networking.ingress.nginx;

option go_package = "namespacelabs.dev/foundation/internal/runtime/kubernetes/networking/ingress/nginx";

message OpGenerateWebhookCert {
    string namespace          = 1;
    string secret_name        = 2;
    bytes  webhook_definition = 3;
    string target_host        = 4;
}